--- a/C++/TinyWebServer/makefile
+++ b/C++/TinyWebServer/makefile
@@ -9,7 +9,7 @@ else
 endif
 
 server: main.cpp  ./timer/lst_timer.cpp ./http/http_conn.cpp ./log/log.cpp ./CGImysql/sql_connection_pool.cpp  webserver.cpp config.cpp
-	$(CXX) -o server  $^ $(CXXFLAGS) -lpthread -lmysqlclient
+	$(CXX) -o server  $^ $(CXXFLAGS) -lpthread -lmysqlclient -I/usr/include/mysql/mysql.h
 
 clean:
 	rm  -r server
